# health-check

./: README.md
app/: main.py  pyproject.toml  send_random_data.py
app/static/: acceleration.js  heart_rate.js  scripts.js  styles.css
app/templates/: index.html
