[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["abkeito <abkeito@yahoo.co.jp>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.115.6"
uvicorn = "^0.34.0"
websockets = "^14.1"
requests = "^2.32.3"
flask = "^3.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
